--- a/style/blog.css
+++ b/style/blog.css
@@ -1,4 +1,5 @@
 h3{
     color: red;
-    background-color: aquamarine;
+    
+   cursor: url("https://w7.pngwing.com/pngs/407/764/png-transparent-yellow-smiley-emoji-emoji-computer-icons-emoticon-sunglasses-emoji-smiley-sticker-glasses.png"),auto;
 }
